# kinematic_word_cloud

./: .gitignore  AGENTS.md  README.md  pyproject.toml
examples/: README.md  bioit_svg_config.toml  bioit_top_terms_2016_2026.csv  color_modes_keyframes.csv  palette_bioit.hex  scene_attractors_config.toml  scene_config.toml  scene_keyframes.csv  scene_settled_line_config.toml  simple_keyframes.csv
scripts/: create_fixed_frames.py  create_starting_cloud.py  render_animation.py  render_examples.py
src/kinematic_word_cloud/: __init__.py  animation.py  api.py  background.py  change_color.py  cli.py  config.py  data.py  effects.py  export.py  labels.py  layout.py  physics.py  render.py  render_config.py  scenes.py  timeline.py
tests/: test_scenes.py
