[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kinematic-word-cloud"
version = "0.1.3"
description = "Animate word clouds from tabular keyframe data."
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Kinematic Word Cloud contributors" },
]
keywords = ["animation", "word-cloud", "visualization", "video", "data-visualization"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Multimedia :: Graphics",
  "Topic :: Scientific/Engineering :: Visualization",
]
dependencies = [
  "pandas>=2.0",
  "pillow>=10.0",
  "tomli>=2.0; python_version < '3.11'",
  "wordcloud>=1.9",
]

[project.optional-dependencies]
dev = [
  "build>=1.0",
  "wheel>=0.40",
  "twine>=5.0",
]

[project.scripts]
kinematic-word-cloud = "kinematic_word_cloud.cli:main"
kwc = "kinematic_word_cloud.cli:main"

[project.urls]
Repository = "https://github.com/woodcockt/kinematic_word_cloud"
Issues = "https://github.com/woodcockt/kinematic_word_cloud/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
